--- a/index.html
+++ b/index.html
@@ -1,231 +1,167 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Our Story</title>
-
-    <link type="text/css" rel="stylesheet" href="./index_files/default.css">
-    <script type="text/javascript" src="./index_files/jquery.min.js"></script>
-    <script type="text/javascript" src="./index_files/jscex.min.js"></script>
-    <script type="text/javascript" src="./index_files/jscex-parser.js"></script>
-    <script type="text/javascript" src="./index_files/jscex-jit.js"></script>
-    <script type="text/javascript" src="./index_files/jscex-builderbase.min.js"></script>
-    <script type="text/javascript" src="./index_files/jscex-async.min.js"></script>
-    <script type="text/javascript" src="./index_files/jscex-async-powerpack.min.js"></script>
-    <script type="text/javascript" src="./index_files/functions.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./index_files/love.js" charset="utf-8"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title></title>
     <style type="text/css">
-        <!--
-        .STYLE1 {
-            color: #666666
+        .w {
+            width: 5rem;
+            height: 10rem;
+            position: relative;
+            top: 0;
+            left: 50%;
+            transform: translateX(-2.5rem);
+            border: #0000FF solid .01rem;
+
         }
-        -->
+
+        .ball {
+            width: 0.6rem;
+            height: 0.3rem;
+
+            background: url(img/peng.png) center;
+            background-size: cover;
+            position: absolute;
+            bottom: 0.2rem;
+            left: 50%;
+            transform: translateX(-0.15rem);
+        }
+
+        .but_box {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 7rem;
+            height: 1rem;
+            position: relative;
+            bottom: -0.5rem;
+            left: 50%;
+
+            transform: translateX(-3.5rem);
+            border: greenyellow 0.02rem solid;
+        }
+
+        .newBall {
+            width: 0.3rem;
+            height: 0.3rem;
+            border-radius: 50%;
+            background-color: blue;
+            position: absolute;
+            opacity: 1;
+
+        }
+
+        button {
+            height: 0.5rem;
+        }
+
+        .sco {
+
+
+            color: red;
+            font-size: 0.56rem;
+            position: absolute;
+            bottom: 0rem;
+            left: 50%;
+            transform: translateX(-0.28rem);
+        }
     </style>
 </head>
-
 <body>
-
-    <div id="main">
-        <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a
-                href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a
-                href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
-        <div id="wrap">
-            <div id="text">
-                <div id="code">
-                    <span class="say">* Our Story</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> Our Story 我们的故事</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 不经意相识, 或许是缘分，或许是注定的。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 以后不管怎么样，我都会在。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 就算全世界都抛弃你，记得还有我。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 再累都不用害怕，因为你有我。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 记得在你最需要的时候想起我。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> 我会一直陪着你。</span><br>
-                    <span class="say"> </span><br>
-                    <span class="say"> You are my only girl..Forever..</span><br>
-                    <span class="say"> </span><br>
-                </div>
-            </div>
-            <div id="clock-box">
-                杨龙龙<span class="STYLE1">与</span> 孙皓月<span class="STYLE1">已经相识了</span>
-                <div id="clock"></div>
-            </div>
-            <canvas id="canvas" width="1100" height="680"></canvas>
-        </div>
-
+<div class="w">
+    <div class="ball">
     </div>
-
-    <script>
-    </script>
-
-    <script>
-        (function () {
-            var canvas = $('#canvas');
-
-            if (!canvas[0].getContext) {
-                $("#error").show();
-                return false;
-            }
-
-            var width = canvas.width();
-            var height = canvas.height();
-
-            canvas.attr("width", width);
-            canvas.attr("height", height);
-
-            var opts = {
-                seed: {
-                    x: width / 2 - 20,
-                    color: "rgb(190, 26, 37)",
-                    scale: 2
-                },
-                branch: [
-                    [535, 680, 570, 250, 500, 200, 30, 100, [
-                        [540, 500, 455, 417, 340, 400, 13, 100, [
-                            [450, 435, 434, 430, 394, 395, 2, 40]
-                        ]],
-                        [550, 445, 600, 356, 680, 345, 12, 100, [
-                            [578, 400, 648, 409, 661, 426, 3, 80]
-                        ]],
-                        [539, 281, 537, 248, 534, 217, 3, 40],
-                        [546, 397, 413, 247, 328, 244, 9, 80, [
-                            [427, 286, 383, 253, 371, 205, 2, 40],
-                            [498, 345, 435, 315, 395, 330, 4, 60]
-                        ]],
-                        [546, 357, 608, 252, 678, 221, 6, 100, [
-                            [590, 293, 646, 277, 648, 271, 2, 80]
-                        ]]
-                    ]]
-                ],
-                bloom: {
-                    num: 700,
-                    width: 1080,
-                    height: 650,
-                },
-                footer: {
-                    width: 1200,
-                    height: 5,
-                    speed: 10,
-                }
-            }
-
-            var tree = new Tree(canvas[0], width, height, opts);
-            var seed = tree.seed;
-            var foot = tree.footer;
-            var hold = 1;
-
-            canvas.click(function (e) {
-                var offset = canvas.offset(), x, y;
-                x = e.pageX - offset.left;
-                y = e.pageY - offset.top;
-                if (seed.hover(x, y)) {
-                    hold = 0;
-                    canvas.unbind("click");
-                    canvas.unbind("mousemove");
-                    canvas.removeClass('hand');
-                }
-            }).mousemove(function (e) {
-                var offset = canvas.offset(), x, y;
-                x = e.pageX - offset.left;
-                y = e.pageY - offset.top;
-                canvas.toggleClass('hand', seed.hover(x, y));
-            });
-
-            var seedAnimate = eval(Jscex.compile("async", function () {
-                seed.draw();
-                while (hold) {
-                    $await(Jscex.Async.sleep(10));
-                }
-                while (seed.canScale()) {
-                    seed.scale(0.95);
-                    $await(Jscex.Async.sleep(10));
-                }
-                while (seed.canMove()) {
-                    seed.move(0, 2);
-                    foot.draw();
-                    $await(Jscex.Async.sleep(10));
-                }
-            }));
-
-            var growAnimate = eval(Jscex.compile("async", function () {
-                do {
-                    tree.grow();
-                    $await(Jscex.Async.sleep(10));
-                } while (tree.canGrow());
-            }));
-
-            var flowAnimate = eval(Jscex.compile("async", function () {
-                do {
-                    tree.flower(2);
-                    $await(Jscex.Async.sleep(10));
-                } while (tree.canFlower());
-            }));
-
-            var moveAnimate = eval(Jscex.compile("async", function () {
-                tree.snapshot("p1", 240, 0, 610, 680);
-                while (tree.move("p1", 500, 0)) {
-                    foot.draw();
-                    $await(Jscex.Async.sleep(10));
-                }
-                foot.draw();
-                tree.snapshot("p2", 500, 0, 610, 680);
-
-                // 会有闪烁不得意这样做, (＞﹏＜)
-                canvas.parent().css("background", "url(" + tree.toDataURL('image/png') + ")");
-                canvas.css("background", "#ffe");
-                $await(Jscex.Async.sleep(300));
-                canvas.css("background", "none");
-            }));
-
-            var jumpAnimate = eval(Jscex.compile("async", function () {
-                var ctx = tree.ctx;
-                while (true) {
-                    tree.ctx.clearRect(0, 0, width, height);
-                    tree.jump();
-                    foot.draw();
-                    $await(Jscex.Async.sleep(25));
-                }
-            }));
-
-            var textAnimate = eval(Jscex.compile("async", function () {
-                var together = new Date();
-                together.setFullYear(2020, 11, 06); 			//时间年月日
-                together.setHours(19);						//小时	
-                together.setMinutes(00);					//分钟
-                together.setSeconds(0);					//秒前一位
-                together.setMilliseconds(2);				//秒第二位
-
-                $("#code").show().typewriter();
-                $("#clock-box").fadeIn(500);
-                while (true) {
-                    timeElapse(together);
-                    $await(Jscex.Async.sleep(1000));
-                }
-            }));
-
-            var runAsync = eval(Jscex.compile("async", function () {
-                $await(seedAnimate());
-                $await(growAnimate());
-                $await(flowAnimate());
-                $await(moveAnimate());
-
-                textAnimate().start();
-
-                $await(jumpAnimate());
-            }));
-
-            runAsync().start();
-        })();
-    </script>
-
-
+</div>
+<div class="but_box">
+    <!-- <button class="add">加速</button> -->
+    <button class="left">左</button>
+    <button class="cut">停止</button>
+    <button class="right">右</button>
+</div>
+<div class="sco">0</div>
 </body>
+<!-- <script src="js/rem.js" type="text/javascript" charset="utf-8"></script> -->
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript">
+    //rem.js
+    ! function(n) {
+        var e = n.document,
+            t = e.documentElement,
+            i = 720,
+            d = i / 100,
+            o = "orientationchange" in n ? "orientationchange" : "resize",
+            a = function() {
+                var n = t.clientWidth || 320;
+                n > 720 && (n = 720);
+                t.style.fontSize = n / d + "px"
+            };
+        e.addEventListener && (n.addEventListener(o, a, !1), e.addEventListener("DOMContentLoaded", a, !1))
+    }(window);
+    //定义按钮动作（速度可以自己调节）
+    $('.left').click(function() {
 
+        $('.ball').stop().animate({
+            left: '0.15rem'
+        }, 2000)
+    })
+    $('.right').click(function() {
+
+        $('.ball').stop().animate({
+            left: '4.85rem'
+        }, 4000)
+    })
+    $('.cut').click(function() {
+        $('.ball').stop()
+    })
+    //随机生成掉落小球
+    const arr = []
+    var sco = 0
+    var i = 0
+    var w = 0.6
+    function bron() {
+        const x = Math.random() * 450 + 0.15;
+        arr.push(Math.round(x))
+        $(".w").append('<div class=' + "newBall" + i + '></div>');
+        $('.newBall' + i).css({
+            'left': arr[i] / 100 + "rem",
+            'width': '0.3rem',
+            'height': '0.3rem',
+            'borderRadius': '50%',
+            'background': 'url(img/pig.png) center',
+            'background-size': 'cover',
+            'position': 'absolute'
+        }).animate({
+            'top': '9.5001rem'
+        }, 4000, function() {
+            a = i - 1
+
+            if ($('.newBall' + a).position().top == $('.ball').position().top && $('.newBall' + a).position().left >= $(
+                '.ball').position().left - 15 && $('.newBall' + a).position().left <= $('.ball').position().left + 30) {
+                sco = sco + 10
+                $('.sco').text(sco)
+                i = i - 1
+                arr.pop()
+                $('.newBall' + a).remove()
+                w=w+0.01
+                $('.ball').css({
+                    "width":w+"rem"
+                })
+
+            } else {
+                // console.log('好可惜')
+            }
+
+        }, )
+        i++
+        if (i >= 10 || sco >= 200) {
+            clearInterval(collide)
+            alert('游戏结束,难易程度可调节')
+        }
+    }
+    var collide = setInterval(bron, 4100)
+</script>
 </html>
+
+
