--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="./flip.html">自定义文字</a>
     <br>
     <a href="./christmastree.html">圣诞树</a>
+    <br>
+    <a href="./rank.html">排行榜</a>
 </head>
 <body>
     
